# OCFL_IEEE_BigData2024

./: LICENSE
numerical_results/: IEEE_BigData2024.ipynb
numerical_results/IEEE_BigData2024_Tables/Clustering_Performance/: CIFAR10_15_nonoverlaping_balanced.tex  CIFAR10_15_nonoverlaping_imbalanced.tex  CIFAR10_15_overlaping_balanced.tex  CIFAR10_15_overlaping_imbalanced.tex  CIFAR10_30_nonoverlaping_balanced.tex  CIFAR10_30_nonoverlaping_imbalanced.tex  CIFAR10_30_overlaping_balanced.tex  CIFAR10_30_overlaping_imbalanced.tex  FMNIST_15_nonoverlaping_balanced.tex  FMNIST_15_nonoverlaping_imbalanced.tex  FMNIST_15_overlaping_balanced.tex  FMNIST_15_overlaping_imbalanced.tex  FMNIST_30_nonoverlaping_balanced.tex  FMNIST_30_nonoverlaping_imbalanced.tex  FMNIST_30_overlaping_balanced.tex  FMNIST_30_overlaping_imbalanced.tex  MNIST_15_nonoverlaping_balanced.tex  MNIST_15_nonoverlaping_imbalanced.tex  MNIST_15_overlaping_balanced.tex  MNIST_15_overlaping_imbalanced.tex  MNIST_30_nonoverlaping_balanced.tex  MNIST_30_nonoverlaping_imbalanced.tex  MNIST_30_overlaping_balanced.tex  MNIST_30_overlaping_imbalanced.tex
numerical_results/experiments/CIFAR10/centralised_test/: testing_results.csv  training_loss.csv
numerical_results/experiments/FMNIST/centralised_test/: testing_results.csv  training_loss.csv
ocfl-demo/: README.md  baseline_experiments.py  model_logs.txt  net_architectures.py  nodes_logs.txt  orchestrator_logs.txt  pyproject.toml  run_simulation.py
ocfl-demo/datasets/: data_configs.py  datasets_generation.py
(+1619 files in other folders)
